[workspace]
members = [
	"core",
	"core-client",
	"core-client/transports",
	"http",
	"ipc",
	"derive",
	"pubsub",
	"pubsub/more-examples",
	"server-utils",
	"stdio",
	"tcp",
	"test",
	"ws",
]

[patch.crates-io]
serde = { default-features = false, git = "https://github.com/vmarkushin/serde.git", features = ["alloc"], package = "serde" }
serde_json = { default-features = false, git = "https://github.com/vmarkushin/json.git", features = ["alloc"], package = "serde_json" }
