[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Transport agnostic rust implementation of JSON-RPC 2.0 Specification."
documentation = "https://docs.rs/jsonrpc-core/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT"
name = "jsonrpc-core"
repository = "https://github.com/paritytech/jsonrpc"
version = "16.0.0"

categories = [
	"asynchronous",
	"network-programming",
	"web-programming::http-client",
	"web-programming::http-server",
	"web-programming::websocket",
]

[dependencies]
log = { version = "0.4", default-features = false }
futures = { version = "0.3.6", default-features = false, features = ["alloc"] }
serde = { version = "1.0.116", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.59", default-features = false, features = ["alloc"] }
serde_derive = "1.0"

[features]
default = ['std']
std = [
	"futures/std",
	"futures/executor",
	"serde/std",
	"serde_json/std",
	"log/std",
]
arbitrary_precision = ["serde_json/arbitrary_precision"]

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
